--- a/land.html
+++ b/land.html
@@ -17,7 +17,7 @@
         <aside>
             <div class="toggle">
                 <div class="logo">
-                    <img src="6.jpg">
+                    <img src="assets/images/6.jpg">
                     <h2>Asmr<span class="danger">Prog</span></h2>
                 </div>
                 <div class="close" id="close-btn">
@@ -154,22 +154,22 @@
                 <h2>New Users</h2>
                 <div class="user-list">
                     <div class="user">
-                        <img src="1.jpeg">
+                        <img src="assets/images/1.jpeg">
                         <h2>Jack</h2>
                         <p>54 Min Ago</p>
                     </div>
                     <div class="user">
-                        <img src="2.jpeg">
+                        <img src="assets/images/2.jpeg">
                         <h2>Amir</h2>
                         <p>3 Hours Ago</p>
                     </div>
                     <div class="user">
-                        <img src="3.jpeg">
+                        <img src="assets/images/3.jpeg">
                         <h2>Ember</h2>
                         <p>6 Hours Ago</p>
                     </div>
                     <div class="user">
-                        <img src="4.jpeg">
+                        <img src="assets/images/4.jpeg">
                         <h2>More</h2>
                         <p>New User</p>
                     </div>
@@ -222,7 +222,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="SOS.jpeg">
+                        <img src="assets/images/SOS.jpeg">
                     </div>
                 </div>
 
@@ -231,7 +231,7 @@
 
             <div class="user-profile">
                 <div class="logo">
-                    <img src="5.png">
+                    <img src="assets/images/5.png">
                     <h2>AsmrProg</h2>
                     <p>Fullstack Web Developer</p>
                 </div>
