--- a/land.html
+++ b/land.html
@@ -18,7 +18,7 @@
             <div class="toggle">
                 <div class="logo">
                     <img src="assets/images/6.jpg">
-                    <h2>Asmr<span class="danger">Prog</span></h2>
+                    <h2>Snip</h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">
