--- a/land.html
+++ b/land.html
@@ -260,7 +260,7 @@
                     </div>
                     <div class="content">
                         <div class="info">
-                            <h3>Workshop</h3>
+                            <h3>Appointment</h3>
                             <small class="text_muted">
                                 08:00 AM - 12:00 PM
                             </small>
