--- a/land.html
+++ b/land.html
@@ -228,7 +228,7 @@
                     </div>
                     <div class="content">
                         <div class="info">
-                            <h3>Report Timing</h3>
+                            <h3>Reports</h3>
                             <small class="text_muted">
                                 08:00 AM - 12:00 PM
                             </small>
@@ -247,10 +247,22 @@
                         <h3>Add Reminder</h3>
                     </div>
                 </div>
+                <div class="chatbot">
+                    <h1>Chatbot</h1>
+                </div>
+                <div id="chat-container">
+                    <div id="chat-box">
+                        <div id="messages"></div>
+                        <input type="text" id="user-input" placeholder="Type your message here...">
+                        <button onclick="sendMessage()">Send</button>
+                    </div>
+                </div
 
             </div>
 
         </div>
+
+
     </div>
 
     <script src="land.js"></script>
